# изменения:
#https://github.com/interesnij/meta/commit/17ed1199479a09270e7aff4d4ed0bd7c9b2929b3

[package]
name = "meta"
version = "1.0.1"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
env_logger = "0.9.0"
log = "0.4"
serde = "1.0"
serde_json = "*"
dotenv = "0.15.0"
diesel = { version = "1.4.4", features = ["chrono", "postgres", "r2d2", "uuidv07", "serde_json"] }
chrono = { version = "0.4", features = ["serde"] }
actix-session = "0.5"
actix-redis = "0.10"
actix-multipart = "0.4.0-beta.12"
futures = "0.3.21"
actix-form-data = "0.6.2"

mime = "0.3.16"
failure = "0.1.8"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
actix-identity = "*"
actix-cors = "*"
actix-service = "*"
lazy_static = "*"
validator = "*"
validator_derive = "*"

bytes = { version = "1.1", features = ["serde"] }
regex = "1.5.4"
actix-rt = "2"
derive_more = "0.99.5"
argonautica = "0.2.0"
futures-util = "0.3.21"
sailfish = "0.4.0"
sailfish-macros = "0.4.0"
